...

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      backgroundColor: Theme.of(context).backgroundColor,
      body: RefreshIndicator(
        key: ValueKey('home screen refresh indicator'),
        color: Theme.of(context).dividerColor,
        onRefresh: () async {
          await Provider.of<HomeTopRandomAnimal>(context, listen: false)
              .getData();
          await Provider.of<Randoms>(context, listen: false).getData();
          await Provider.of<Endangered>(context, listen: false).getData();
...

                    ///Structure of the home screen using helper classes
                    children: [
                      HomeTopScreen(),
                      const CategoricalScroll(),
                      const RandomList(key: ValueKey("Random")),
                      const EndangeredList(key: ValueKey("Endangered")),
                      Container(height: 50),
                    ],
                  ),
                ),
              ),
            ),
...
