...
                },
                labelColor: Theme.of(context).primaryColor,
                unselectedLabelColor: Colors.black,
                tabs: [
                  ///Names of the three tabs displayed on the screen
                  Tab(text: 'Overview', key: ValueKey('overview tab'),),
                  Tab(text: 'Features', key: ValueKey('features tab'),),
                  Tab(text: 'Miscellaneous', key: ValueKey('miscellaneous tab'), ),
                ],
              ),
            ),
            Container(
              height: MediaQuery.of(context).size.height -
                  90, //height of TabBarView
...
