...
                  isConfirmed = true;

                  Navigator.of(context).pop();
                },
                child: const Text(
                  'Yes',
                  key: ValueKey('confirmRemoval'),
                  style: TextStyle(
                    color: Color(0xFF4c8e82),
                  ),
                ),
              ),
              TextButton(
...
                                        ),
                                      ),
                                      FavoriteButton(
                                        currentAnimal: favorites[index],
                                        onPressed: confirmUnfavorite,
                                        key: ValueKey(
                                            'favoriteButtonOnFavoriteScreen'),

                                        ///Structure of the toast shown on favorite screen
                                        showToast: () {
                                          if (isConfirmed) {
                                            isConfirmed = false;
                                            MotionToast(
...
